--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,3 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+api_products:
+  path: /api/products
+  controller: App\Controller\ProductController::getProducts
